| Bug #16537 | Events: mysql.event.starts is null | ||
|---|---|---|---|
| Submitted: | 16 Jan 2006 16:46 | Modified: | 28 Feb 2006 22:27 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server: SP | Severity: | S3 (Non-critical) |
| Version: | 5.1.6-alpha-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Andrey Hristov | Target Version: | |
[14 Feb 2006 0:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2554
[28 Feb 2006 11:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3233
[28 Feb 2006 14:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3242
[28 Feb 2006 17:51]
Andrey Hristov
Fixed in 5.1.8 . Also SHOW EVENTS/SELECT I_S won't show anymore 0000-00-00 but empty value if in fact the value is NULL.
[28 Feb 2006 22:27]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented behaviour change in 5.1.8 changelog. Closed.

Description: If I create an event, without specifying STARTS, the value of mysql.event.start is NULL. But NULL would mean that the start timestamp is unknown or inapplicable. That's not so, the start time should be the same as the created time. How to repeat: mysql> create event e on schedule every 1 second do set @a=5; Query OK, 1 row affected (0.00 sec) mysql> select * from mysql.event\G *************************** 1. row *************************** db: db1 name: e body: set @a=5 definer: root@localhost execute_at: NULL interval_value: 1 interval_field: SECOND created: 2006-01-16 08:47:26 modified: 2006-01-16 08:47:26 last_executed: NULL starts: NULL ends: NULL status: ENABLED on_completion: DROP comment: 1 row in set (0.00 sec)