sql/sql_yacc.yy
@@ -1475,6 +1475,9 @@ opt_ev_status: /* empty */ {$<ulong_num>$= 0;}
       ;
 
 ev_starts: /* empty */
+          {
+            Lex->et->init_starts(YYTHD, new Item_func_now_local());
+          }
         | STARTS_SYM expr
           {
             LEX *lex= Lex;
